feat: add head tag for no-cache to check for updated content

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
       name="Zara Kahan"
       content="Work of Zara Kahan"
     />
+    <meta http-equiv='cache-control' content='no-cache'>
+    <meta http-equiv='pragma' content='no-cache'>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
